# ml-playground

./: pyproject.toml  renovate.json
gemma-4/: .gitignore  finetune.ipynb  pyproject.toml
mms/: .gitignore  finetune.ipynb  pyproject.toml
mms-1b/: .gitignore  finetune.ipynb
mms-300m/: .gitignore  finetune.ipynb  pyproject.toml
src/ml_playground/: __init__.py
w2v-bert-2.0/: .gitignore  finetune.ipynb
