[project]
name = "ml-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.14"
dependencies = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.4",
    "huggingface-hub==1.10.2",
    "peft==0.18.1",
    "torch==2.11.0",
    "torchcodec==0.11.1",
    "torchvision==0.26.0",
    "trackio[gpu]==0.23.0",
    "transformers==5.5.3",
    "trl==1.1.0",
]

[dependency-groups]
dev = ["ipykernel==7.2.0", "ipywidgets==8.1.8"]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

# [tool.uv.sources]
# torch = { index = "pytorch-cu128" }
# torchcodec = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
