[project]
name = "ml-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = ["gemma-4", "mms-300m"]

# [tool.uv.sources]
# torch = { index = "pytorch-cu128" }
# torchcodec = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
