[project]
name = "gemma-4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.4",
    "huggingface-hub==1.12.0",
    "peft==0.19.1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "trackio[gpu]==0.25.0",
    "transformers==5.6.2",
    "trl==1.2.0",
]

[dependency-groups]
dev = ["ipykernel==7.2.0", "ipywidgets==8.1.8"]
