[project]
name = "mms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "accelerate==1.13.0",
    "datasets==4.8.4",
    "huggingface-hub==1.12.0",
    "torch==2.11.0",
    "torchcodec==0.11.1",
    "trackio[gpu]==0.25.1",
    "transformers==5.6.2",
]

[dependency-groups]
dev = ["ipykernel==7.2.0", "ipywidgets==8.1.8"]
